kubernetes/condominiumgw-k8s/condominiumgw-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: condominiumgw-postgresql
  namespace: condominium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: condominiumgw-postgresql
  template:
    metadata:
      labels:
        app: condominiumgw-postgresql
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: postgres
          image: postgres:14.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: condominiumgw-postgresql
  namespace: condominium
spec:
  selector:
    app: condominiumgw-postgresql
  ports:
    - port: 5432
