kubernetes/condominiumgw-k8s/condominiumgw-service.yml
apiVersion: v1
kind: Service
metadata:
  name: condominiumgw
  namespace: condominium
  labels:
    app: condominiumgw
spec:
  selector:
    app: condominiumgw
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
